@@ -138,9 +138,13 @@ struct Job {
                                                    std::vector<std::string> const& exclude);
   static std::string randomIdleAvailableServer(Node const& snap,
                                                velocypack::Slice const& exclude);
+
   static size_t countGoodOrBadServersInList(Node const& snap,
                                             velocypack::Slice const& serverList);
   static size_t countGoodOrBadServersInList(Node const& snap, std::vector<std::string> const& serverList);
+  static size_t countGoodOrBadServersInList(Node const& snap, std::unordered_set<std::string> const& serverList);
+
+
   static bool isInServerList(Node const& snap, std::string const& prefix, std::string const& server, bool isArray);
 
   /// @brief Get servers from plan, which are not failed or cleaned out
@@ -157,6 +161,15 @@ struct Job {
                                                                std::string const& col,
                                                                std::string const& shrd,
                                                                std::string const& serverToAvoid);
+
+  /// @brief The shard must be one of a collection without
+  /// `distributeShardsLike`. This returns all servers which 
+  /// are in sync for this shard and for all of its clones, including
+  /// the leader.
+  static std::vector<std::string> findAllInSyncReplicas(
+      Node const& snap,
+      std::string const& db,
+      std::vector<Job::shard_t> const& shardsLikeMe);
 
   /// @brief The shard must be one of a collection without
   /// `distributeShardsLike`. This returns all servers which 
