@@ -44,6 +44,13 @@ struct check_t {
   check_t(std::string const& n, bool g) : good(g), name(n) {}
 };
 
+// This is the functional version which actually does the work, it is
+// called by the private method Supervision::enforceReplication and the
+// unit tests:
+void enforceReplicationFunctional(Node const& snapshot, 
+                                  uint64_t& jobId,
+                                  std::shared_ptr<VPackBuilder> envelope);
+
 class Supervision : public arangodb::CriticalThread {
  public:
   typedef std::chrono::system_clock::time_point TimePoint;
@@ -165,6 +172,7 @@ class Supervision : public arangodb::CriticalThread {
   /// @brief Check for inconsistencies in replication factor vs dbs entries
   void enforceReplication();
 
+ private:
   /// @brief Move shard from one db server to other db server
   bool moveShard(std::string const& from, std::string const& to);
 
@@ -196,7 +204,11 @@ class Supervision : public arangodb::CriticalThread {
 
   void shrinkCluster();
 
- public:
+ public:  // only for unit tests:
+  void setSnapshotForUnitTest(Node* snapshot) {
+    _snapshot = *snapshot;
+  }
+
   static void cleanupLostCollections(Node const& snapshot, AgentInterface* agent,
                                      uint64_t& jobId);
 
